--- a/.gitignore
+++ b/.gitignore
@@ -7,13 +7,4 @@ application/cache/*
 application/logs/*
 !application/logs/index.html
 !application/logs/.htaccess
-.idea/
-.idea/cloudwalk-acti.iml
-.idea/deployment.xml
-.idea/copyright/profiles_settings.xml
-.idea/modules.xml
-.idea/vcs.xml
-.idea/workspace.xml
-.idea/modules.xml___jb_tmp___
-.idea/workspace.xml
-.idea/workspace.xml
+.idea/*
